cmake_minimum_required(VERSION 3.17)
project(CLearn C)

set(CMAKE_C_STANDARD 99)

add_executable(HelloWorld main.c)
add_executable(hello hello.c)
add_executable(variables variables.c)
add_executable(saida saida.c)
add_executable(entrada entrada.c)
add_executable(programa01 programa01.c)
add_executable(programa02 programa02.c)